--- a/ES6/package.json
+++ b/ES6/package.json
@@ -6,9 +6,11 @@
   "dependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.4.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.0",
     "@babel/preset-env": "^7.4.2"
   },
   "scripts": {
-    "dev": "babel ./main.js -o ./bundle.js -w"
+    "dev": "babel ./main.js -o ./bundle.js -w",
+    "module1": "babel ./exercises/module1/main.js -o ./exercises/module1/app.js -w"
   }
 }
