--- a/ES6/package.json
+++ b/ES6/package.json
@@ -3,14 +3,19 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "dependencies": {
+  "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.4.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.4.0",
-    "@babel/preset-env": "^7.4.2"
+    "@babel/preset-env": "^7.4.2",
+    "babel-loader": "^8.0.5",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.2.1"
   },
   "scripts": {
-    "dev": "babel ./main.js -o ./bundle.js -w",
+    "dev": "webpack-dev-server --mode=development",
+    "build": "webpack --mode=production",
     "module1": "babel ./exercises/module1/main.js -o ./exercises/module1/app.js -w"
   }
 }
