--- a/ES6/package.json
+++ b/ES6/package.json
@@ -7,6 +7,8 @@
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.4.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.4.0",
+    "@babel/plugin-transform-async-to-generator": "^7.4.0",
+    "@babel/polyfill": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
     "babel-loader": "^8.0.5",
     "webpack": "^4.29.6",
@@ -17,5 +19,8 @@
     "dev": "webpack-dev-server --mode=development",
     "build": "webpack --mode=production",
     "module1": "babel ./exercises/module1/main.js -o ./exercises/module1/app.js -w"
+  },
+  "dependencies": {
+    "axios": "^0.18.0"
   }
 }
